--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Calculadora | Teoría de Colas",
-  "name": "Calculadora de teoría de Colas",
+  "short_name": "Teoría de Colas",
+  "name": "Calculadora de teoría de Colas ESPOCH",
   "icons": [
     {
       "src": "favicon.ico",
